2008-08-18  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/h264/h264.xml:
	audio-encoder -> video-encoder

2008-08-08  Julien Moutte  <julien@fluendo.com>

	* configure.ac:
	* flumotion/component/encoders/Makefile.am:
	* flumotion/component/encoders/h264/Makefile.am:
	* flumotion/component/encoders/h264/h264-wizard.glade:
	* flumotion/component/encoders/h264/h264.py:
	* flumotion/component/encoders/h264/h264.xml:
	* flumotion/component/encoders/h264/wizard_gtk.py:
	* flumotion/component/muxers/flv/flv.xml: Add initial H.264 support.

2008-08-08  Johan Dahlin  <johan@flumotion.com>

	* flumotion/component/encoders/vp6/flv*:
	Remove old files.
	* flumotion/component/encoders/vp6/vp6.xml:
	Add vp6-component which contains an __init__.py a vp6.py

2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/Makefile.am:
	  Fix admin_gtk.py
	* flumotion/component/encoders/aac/aac.py:
	* flumotion/component/encoders/mp3/mp3.py:
	  Change rate property name to samplerate.
	* flumotion/component/encoders/aac/wizard_gtk.py:
	* flumotion/component/encoders/mp3/wizard_gtk.py:
	* flumotion/component/encoders/vp6/wizard_gtk.py:
	  Add pychecker suppressions for our widget magic.

2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/aac/aac.xml:
	* flumotion/component/encoders/flv/flv.xml:
	* flumotion/component/encoders/mp3/mp3.xml:
	* flumotion/component/encoders/vp6/vp6.xml:
	* flumotion/component/muxers/flv/flv.xml:
	  Fix _description everywhere.

2008-08-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/flv/admin_gtk.py (added):
	* flumotion/component/encoders/flv/flv_wizard.py (deleted):
	  Rename.

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	  Bump to 0.5.0.1

2008-07-31  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/encoders/vp6/Makefile.am: