@@ -14,14 +14,17 @@
 
 import gettext
 
+from zope.interface import implements
+
 from flumotion.common.i18n import gettexter
 from flumotion.wizard.basesteps import AudioEncoderStep
-from flumotion.wizard.models import AudioEncoder
+from flumotion.admin.assistant.models import AudioEncoder
+from flumotion.admin.assistant.interfaces import IEncoderPlugin
 
 __version__ = "$Rev$"
-
 _ = gettext.gettext
 T_ = gettexter('flumotion')
+
 
 class AACAudioEncoder(AudioEncoder):
     componentType = 'aac-encoder'
@@ -62,6 +65,7 @@ class AACStep(AudioEncoderStep):
 
 
 class AACWizardPlugin(object):
+    implements(IEncoderPlugin)
     def __init__(self, wizard):
         self.wizard = wizard
         self.model = AACAudioEncoder()
