@@ -17,9 +17,9 @@ import os
 
 from zope.interface import implements
 
+from flumotion.admin.assistant.models import VideoEncoder
+from flumotion.admin.assistant.interfaces import IEncoderPlugin
 from flumotion.wizard.basesteps import VideoEncoderStep
-from flumotion.wizard.interfaces import IEncoderPlugin
-from flumotion.wizard.models import VideoEncoder
 
 __version__ = "$Rev$"
 _ = gettext.gettext
